Fix threading issue with OSX 15.4 Updates to JDK 24.0.1